Comments and fix errors

--- a/index.html
+++ b/index.html
@@ -12,5 +12,15 @@
         <li class="items"><a href="">Items 3</a></li>
         <li class="items"><a href="">Items 4</a></li>
     </ul>
+    <p>Esto es un párrafo, no un comentario, por lo tanto se visualiza</p>
+
+    <!--
+        Esto es un comentario y no se visualiza dentro de la web
+    -->
 </body>
+<script>
+    // Comentario tipo línea
+    // 51:04
+    /* Comentario tipo bloque */
+</script>
 </html>
