--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
     <!--
         Esto es un comentario y no se visualiza dentro de la web
     -->
+    <h1>Este es un h1</h1>
+    <h2>Este es un h2</h2>
+    <h3>Este es un h3</h3>
+    <h4>Este es un h4</h4>
+    <h5>Este es un h5</h5>
+    <h6>Este es un h6</h6>
+
+    <p>Palabras en <strong>negrita</strong>, <i>itálica</i>, <u>subrrayado</u>, e=mc<sup>2</sup>, H<sub>2</sub>O, <mark>marcatexto</mark>, <small>letras pequeñas</small></p>
 </body>
 <script>
     // Comentario tipo línea
