--- a/index.html
+++ b/index.html
@@ -25,9 +25,13 @@
     <h6>Este es un h6</h6>
 
     <p>Palabras en <strong>negrita</strong>, <i>itálica</i>, <u>subrrayado</u>, e=mc<sup>2</sup>, H<sub>2</sub>O, <mark>marcatexto</mark>, <small>letras pequeñas</small></p>
+
+    <p>Este es un texto, donde voy a usar la etiqueta br, para hacer un salto de línea <br>Este es el salto de línea hecho por la etiqueta</p>
+    <em>Este texto hace enfásis</em>
 </body>
 <script>
     // Comentario tipo línea
+    // 1:48:00
     // 51:04
     /* Comentario tipo bloque */
 </script>
