pre and code tags

--- a/index.html
+++ b/index.html
@@ -28,6 +28,37 @@
 
     <p>Este es un texto, donde voy a usar la etiqueta br, para hacer un salto de línea <br>Este es el salto de línea hecho por la etiqueta</p>
     <em>Este texto hace enfásis</em>
+    <br />
+    <code>
+        const a = 23
+    </code>
+
+    <hr />
+
+    <h1>Etiqueta de preformateo y código</h1>
+
+    <pre>
+        <p>
+            Este es la etiqueta párrafo dentro de una etiqueta pre
+        </p>
+    </pre>
+    <hr>
+    <h2>Etiqueta que contiene código</h2>
+    <pre>
+        <code>
+            import App './App'
+
+            const App = () => {
+                return (
+                    &lt;&gt;
+                    &lt;div&gt;App&lt;div&gt;
+
+                    &lt;HelloWorld /&gt;
+                    </>
+                )
+            }
+        </code>
+    </pre>
 </body>
 <script>
     // Comentario tipo línea
