--- a/index.html
+++ b/index.html
@@ -54,11 +54,49 @@
                     &lt;div&gt;App&lt;div&gt;
 
                     &lt;HelloWorld /&gt;
-                    </>
                 )
             }
         </code>
     </pre>
+
+    <hr>
+
+    <h2>Estructura semantica HTML5</h2>
+
+    <p>Las etiquetas semánticas son aquellas que son estructuradas</p>
+    <div>
+       Todas son etiquetas estructuradas, solo las etiquetas &lt;div&gt; no son etiquetas estructuradas  
+    </div>
+    <br>
+
+    <header>
+        la etiqueta &lt;header&gt; es la etiqueta de cabecera de un sitio web, se usa para escructurar listas de enlaces, funciona para proporcionar información de introducción o de identificación en conjunto con la etiqueta &lt;nav&gt; ambas funcionan para traer contenido de listas dirigidos hacía las partes del sitio web
+        <nav>
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Servicios</a></li>
+            </ul>
+        </nav>
+    </header>
+    <br>
+    
+    <main>
+        la etiqueta &lt;main&gt; es la etiqueta que define el contenido principal de un sitio web, solo puede existir una etiqueta main por documento
+
+        
+    </main>
+    <br>
+    <footer>la etiqueta &lt;footer&gt; es la etiqueta que define el pie de página en un sitio web</footer>
+    <br>
+    <nav>la etiqueta &lt;nav&gt; es la etiqueta que define un conjunto de enlaces en un sitio web</nav>
+    <br>
+    <article>la etiqueta &lt;article&gt; es la etiqueta que sirve para representar autocontenido</article>
+    <br>
+    <aside>la etiqueta &lt;aside&gt; es la etiqueta que representa un contenido secundario o complementario</aside>
+    <br>
+    <section>la etiqueta &lt;section&gt; es la etiqueta que representa como su nombre lo dice, una sección que representa un contenido genérico</section>
+    <br>
+    <address>la etiqueta &lt;address&gt; es la etiqueta que representa un dirección, de calle, cra # etc</address>
 </body>
 <script>
     // Comentario tipo línea
