Use vite for run server

--- a/index.html
+++ b/index.html
@@ -6,98 +6,98 @@
     <title>Document</title>
 </head>
 <body>
-    <ul id="menu">
+    <div id="id">
+      <ul id="menu">
         <li class="items"><a href="">Items 1</a></li>
         <li class="items"><a href="">Items 2</a></li>
         <li class="items"><a href="">Items 3</a></li>
         <li class="items"><a href="">Items 4</a></li>
-    </ul>
-    <p>Esto es un párrafo, no un comentario, por lo tanto se visualiza</p>
+      </ul>
+      <p>Esto es un párrafo, no un comentario, por lo tanto se visualiza</p>
 
-    <!--
+      <!--
         Esto es un comentario y no se visualiza dentro de la web
-    -->
-    <h1>Este es un h1</h1>
-    <h2>Este es un h2</h2>
-    <h3>Este es un h3</h3>
-    <h4>Este es un h4</h4>
-    <h5>Este es un h5</h5>
-    <h6>Este es un h6</h6>
+      -->
+      <h1>Este es un h1</h1>
+      <h2>Este es un h2</h2>
+      <h3>Este es un h3</h3>
+      <h4>Este es un h4</h4>
+      <h5>Este es un h5</h5>
+      <h6>Este es un h6</h6>
 
-    <p>Palabras en <strong>negrita</strong>, <i>itálica</i>, <u>subrrayado</u>, e=mc<sup>2</sup>, H<sub>2</sub>O, <mark>marcatexto</mark>, <small>letras pequeñas</small></p>
+      <p>Palabras en <strong>negrita</strong>, <i>itálica</i>, <u>subrrayado</u>, e=mc<sup>2</sup>, H<sub>2</sub>O, <mark>marcatexto</mark>, <small>letras pequeñas</small></p>
 
-    <p>Este es un texto, donde voy a usar la etiqueta br, para hacer un salto de línea <br>Este es el salto de línea hecho por la etiqueta</p>
-    <em>Este texto hace enfásis</em>
-    <br />
-    <code>
+      <p>Este es un texto, donde voy a usar la etiqueta br, para hacer un salto de línea <br>Este es el salto de línea hecho por la etiqueta</p>
+      <em>Este texto hace enfásis</em>
+      <br />
+      <code>
         const a = 23
-    </code>
+      </code>
 
-    <hr />
+      <hr />
 
-    <h1>Etiqueta de preformateo y código</h1>
+      <h1>Etiqueta de preformateo y código</h1>
 
-    <pre>
-        <p>
+      <pre>
+          <p>
             Este es la etiqueta párrafo dentro de una etiqueta pre
-        </p>
-    </pre>
-    <hr>
-    <h2>Etiqueta que contiene código</h2>
-    <pre>
-        <code>
-            import App './App'
+          </p>
+      </pre>
+      <hr>
+      <h2>Etiqueta que contiene código</h2>
+      <pre>
+          <code>
+              import App './App'
 
-            const App = () => {
-                return (
-                    &lt;&gt;
-                    &lt;div&gt;App&lt;div&gt;
+              const App = () => {
+                  return (
+                      &lt;&gt;
+                      &lt;div&gt;App&lt;div&gt;
 
-                    &lt;HelloWorld /&gt;
-                )
-            }
-        </code>
-    </pre>
+                      &lt;HelloWorld /&gt;
+                  )
+              }
+          </code>
+      </pre>
 
-    <hr>
+      <hr>
 
-    <h2>Estructura semantica HTML5</h2>
+      <h2>Estructura semantica HTML5</h2>
 
-    <p>Las etiquetas semánticas son aquellas que son estructuradas</p>
-    <div>
-       Todas son etiquetas estructuradas, solo las etiquetas &lt;div&gt; no son etiquetas estructuradas  
-    </div>
-    <br>
+      <p>Las etiquetas semánticas son aquellas que son estructuradas</p>
+      <div>
+        Todas son etiquetas estructuradas, solo las etiquetas &lt;div&gt; no son etiquetas estructuradas  
+      </div>
+      <br>
 
-    <header>
-        la etiqueta &lt;header&gt; es la etiqueta de cabecera de un sitio web, se usa para escructurar listas de enlaces, funciona para proporcionar información de introducción o de identificación en conjunto con la etiqueta &lt;nav&gt; ambas funcionan para traer contenido de listas dirigidos hacía las partes del sitio web
-        <nav>
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Servicios</a></li>
-            </ul>
-        </nav>
-    </header>
-    <br>
+      <header>
+          la etiqueta &lt;header&gt; es la etiqueta de cabecera de un sitio web, se usa para escructurar listas de enlaces, funciona para proporcionar información de introducción o de identificación en conjunto con la etiqueta &lt;nav&gt; ambas funcionan para traer contenido de listas dirigidos hacía las partes del sitio web
+          <nav>
+              <ul>
+                  <li><a href="#">Inicio</a></li>
+                  <li><a href="#">Servicios</a></li>
+              </ul>
+          </nav>
+      </header>
+      <br>
     
-    <main>
-        la etiqueta &lt;main&gt; es la etiqueta que define el contenido principal de un sitio web, solo puede existir una etiqueta main por documento
-
-        
-    </main>
-    <br>
-    <footer>la etiqueta &lt;footer&gt; es la etiqueta que define el pie de página en un sitio web</footer>
-    <br>
-    <nav>la etiqueta &lt;nav&gt; es la etiqueta que define un conjunto de enlaces en un sitio web</nav>
-    <br>
-    <article>la etiqueta &lt;article&gt; es la etiqueta que sirve para representar autocontenido</article>
-    <br>
-    <aside>la etiqueta &lt;aside&gt; es la etiqueta que representa un contenido secundario o complementario</aside>
-    <br>
-    <section>la etiqueta &lt;section&gt; es la etiqueta que representa como su nombre lo dice, una sección que representa un contenido genérico</section>
-    <br>
-    <address>la etiqueta &lt;address&gt; es la etiqueta que representa un dirección, de calle, cra # etc</address>
-</body>
+      <main>
+          la etiqueta &lt;main&gt; es la etiqueta que define el contenido principal de un sitio web, solo puede existir una etiqueta main por documento
+      </main>
+      <br>
+      <footer>la etiqueta &lt;footer&gt; es la etiqueta que define el pie de página en un sitio web</footer>
+      <br>
+      <nav>la etiqueta &lt;nav&gt; es la etiqueta que define un conjunto de enlaces en un sitio web</nav>
+      <br>
+      <article>la etiqueta &lt;article&gt; es la etiqueta que sirve para representar autocontenido</article>
+      <br>
+      <aside>la etiqueta &lt;aside&gt; es la etiqueta que representa un contenido secundario o complementario</aside>
+      <br>
+      <section>la etiqueta &lt;section&gt; es la etiqueta que representa como su nombre lo dice, una sección que representa un contenido genérico</section>
+      <br>
+      <address>la etiqueta &lt;address&gt; es la etiqueta que representa un dirección, de calle, cra # etc</address>
+    </div>
+   </body>
 <script>
     // Comentario tipo línea
     // 1:48:00
